--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
+server_fn = { version = "0.8.2" }
 sha2 = { version = "0.10.9" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.6.0" }
