--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -39,6 +39,7 @@ rpassword = { workspace = true, optional = true }
 scopeguard = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+server_fn = { workspace = true }
 sha2 = { workspace = true, optional = true }
 static_assertions = { workspace = true, optional = true }
 stylance = { workspace = true, optional = true }
@@ -92,6 +93,7 @@ client = [
     "dep:wasm-bindgen-futures",
     "dep:wasm-streams",
     "dep:web-sys",
+    "server_fn/browser",
     "terrazzo/client",
 ]
 server = [
@@ -119,6 +121,8 @@ server = [
     "dep:trz-gateway-common",
     "dep:trz-gateway-server",
     "dep:uuid",
+    "server_fn/axum",
+    "server_fn/browser",
     "terrazzo/server",
 ]
 max_level_debug = ["tracing/max_level_debug", "tracing/release_max_level_debug"]
