--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ clap = { version = "4.5.39", features = ["derive"] }
 darling = { version = "0.20.11" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
+fluent-asserter = { version = "0.1.9" }
 futures = { version = "0.3.31" }
 http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
