--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ opt-level = "s"
 terrazzo-pty = { version = "0.1.13", path = "pty" }
 
 async-trait = { version = "0.1.88" }
-autoclone = { version = "0.1.11" }
+autoclone = { version = "0.1.12" }
 axum = { version = "0.8.4" }
 axum-extra = { version = "0.10.1" }
 base64 = { version = "0.22.1" }
@@ -39,6 +39,7 @@ clap = { version = "4.5.39", features = ["derive"] }
 darling = { version = "0.20.11" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
+fluent-asserter = { version = "0.1.9" }
 futures = { version = "0.3.31" }
 http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
@@ -47,7 +48,7 @@ jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
-nameth = { version = "0.1.11" }
+nameth = { version = "0.1.12" }
 nix = { version = "0.30.1" }
 openssl = { version = "0.10.73" }
 pbkdf2 = { version = "0.12.2" }
@@ -65,12 +66,13 @@ scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
+server_fn = { version = "0.8.2" }
 sha2 = { version = "0.10.9" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.6.0" }
 syn = { version = "2.0.101" }
-terrazzo = { version = "0.1.11", default-features = false }
-terrazzo-build = { version = "0.1.11" }
+terrazzo = { version = "0.1.12", default-features = false }
+terrazzo-build = { version = "0.1.12" }
 thiserror = { version = "2.0.12" }
 tokio = { version = "1.45.1" }
 tokio-stream = { version = "0.1.17" }
@@ -84,9 +86,9 @@ tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
-trz-gateway-client = { version = "0.1.11" }
-trz-gateway-common = { version = "0.1.11" }
-trz-gateway-server = { version = "0.1.11" }
+trz-gateway-client = { version = "0.1.12" }
+trz-gateway-common = { version = "0.1.12" }
+trz-gateway-server = { version = "0.1.12" }
 uuid = { version = "1.17.0" }
 wasm-bindgen = { version = "0.2.100" }
 wasm-bindgen-futures = { version = "0.4.50" }
