--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: ./.github/actions/setup
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
+          cache-level: "off"
       - uses: ./.github/actions/publish
         env:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
