--- a/terminal/assets/code-mirror/package.json
+++ b/terminal/assets/code-mirror/package.json
@@ -6,6 +6,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "@codemirror/state": "^6.5.2",
     "codemirror": "^6.0.1"
   },
   "devDependencies": {
