--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ futures = { version = "0.3.31" }
 http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
 include_directory = { version = "0.1.1" }
+inventory = { version = "0.3.20" }
 jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
