--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ axum-extra = { version = "0.10.1" }
 base64 = { version = "0.22.1" }
 bytes = { version = "1.10.1" }
 clap = { version = "4.5.39", features = ["derive"] }
+const_format = { version = "0.2.34" }
 darling = { version = "0.20.11" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
