Wip displayable timestamp

--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -23,10 +23,11 @@ required-features = ["server"]
 [dependencies]
 axum-extra = { workspace = true, optional = true, features = ["cookie"] }
 base64 = { workspace = true, optional = true }
+chrono = { workspace = true, optional = true }
 clap = { workspace = true, optional = true }
+const_format = { workspace = true, optional = true }
 dashmap = { workspace = true, optional = true }
 futures = { workspace = true }
-const_format = { workspace = true, optional = true }
 humantime = { workspace = true, optional = true }
 inventory = { workspace = true, optional = true }
 jsonwebtoken = { workspace = true, optional = true }
@@ -94,9 +95,10 @@ fluent-asserter = { workspace = true }
 [features]
 default = ["server", "max_level_info"]
 client = [
+    "dep:chrono",
     "dep:stylance",
-    "dep:wasm-bindgen",
     "dep:wasm-bindgen-futures",
+    "dep:wasm-bindgen",
     "dep:wasm-streams",
     "dep:web-sys",
     "server_fn/browser",
