--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ axum = { version = "0.8.4" }
 axum-extra = { version = "0.10.1" }
 base64 = { version = "0.22.1" }
 bytes = { version = "1.10.1" }
+chrono = { version = "0.4.41" }
 clap = { version = "4.5.40", features = ["derive"] }
 const_format = { version = "0.2.34" }
 darling = { version = "0.20.11" }
