--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -141,9 +141,9 @@ max_level_debug = ["tracing/max_level_debug", "tracing/release_max_level_debug"]
 max_level_info = [
     "tracing/max_level_info",
     "tracing/release_max_level_info",
-    "concise_traces",
+    "concise-traces",
 ]
-concise_traces = ["terrazzo/concise_traces"]
+concise-traces = ["terrazzo/concise-traces"]
 no_wasm_build = []
 
 [package.metadata.stylance]
