--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -23,11 +23,15 @@ required-features = ["server"]
 [dependencies]
 axum-extra = { workspace = true, optional = true, features = ["cookie"] }
 base64 = { workspace = true, optional = true }
+chrono = { workspace = true, optional = true }
 clap = { workspace = true, optional = true }
+const_format = { workspace = true, optional = true }
 dashmap = { workspace = true, optional = true }
 futures = { workspace = true }
 humantime = { workspace = true, optional = true }
+inventory = { workspace = true, optional = true }
 jsonwebtoken = { workspace = true, optional = true }
+libc = { workspace = true, optional = true }
 nameth = { workspace = true }
 nix = { workspace = true, optional = true, features = ["signal"] }
 openssl = { workspace = true, optional = true }
@@ -43,7 +47,7 @@ server_fn = { workspace = true }
 sha2 = { workspace = true, optional = true }
 static_assertions = { workspace = true, optional = true }
 stylance = { workspace = true, optional = true }
-terrazzo = { workspace = true }
+terrazzo = { workspace = true, optional = true }
 terrazzo-pty = { workspace = true, optional = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, optional = true, features = ["full"] }
@@ -54,8 +58,10 @@ tower-http = { workspace = true, optional = true, features = [
     "sensitive-headers",
     "trace",
 ] }
-tracing = { workspace = true }
-tracing-futures = { workspace = true, features = ["futures-03"] }
+tracing = { workspace = true, optional = true }
+tracing-futures = { workspace = true, features = [
+    "futures-03",
+], optional = true }
 trz-gateway-client = { workspace = true, optional = true }
 trz-gateway-common = { workspace = true, optional = true }
 trz-gateway-server = { workspace = true, optional = true, features = ["acme"] }
@@ -92,9 +98,10 @@ fluent-asserter = { workspace = true }
 [features]
 default = ["server", "max_level_info"]
 client = [
+    "dep:chrono",
     "dep:stylance",
-    "dep:wasm-bindgen",
     "dep:wasm-bindgen-futures",
+    "dep:wasm-bindgen",
     "dep:wasm-streams",
     "dep:web-sys",
     "server_fn/browser",
@@ -104,9 +111,12 @@ server = [
     "dep:axum-extra",
     "dep:base64",
     "dep:clap",
+    "dep:const_format",
     "dep:dashmap",
     "dep:humantime",
+    "dep:inventory",
     "dep:jsonwebtoken",
+    "dep:libc",
     "dep:nix",
     "dep:openssl",
     "dep:pbkdf2",
@@ -121,6 +131,8 @@ server = [
     "dep:tonic",
     "dep:tower-http",
     "dep:tower",
+    "dep:tracing-futures",
+    "dep:tracing",
     "dep:trz-gateway-client",
     "dep:trz-gateway-common",
     "dep:trz-gateway-server",
@@ -129,13 +141,19 @@ server = [
     "server_fn/browser",
     "terrazzo/server",
 ]
-max_level_debug = ["tracing/max_level_debug", "tracing/release_max_level_debug"]
-max_level_info = [
-    "tracing/max_level_info",
-    "tracing/release_max_level_info",
-    "concise_traces",
+max_level_debug = [
+    "terrazzo?/max_client_level_debug",
+    "tracing?/max_level_debug",
+    "tracing?/release_max_level_debug",
 ]
-concise_traces = ["terrazzo/concise_traces"]
+max_level_info = [
+    "terrazzo?/max_client_level_info",
+    "tracing?/max_level_info",
+    "tracing?/release_max_level_info",
+    "concise-traces",
+]
+concise-traces = ["terrazzo?/concise-traces"]
+diagnostics = ["terrazzo?/diagnostics"]
 no_wasm_build = []
 
 [package.metadata.stylance]
