--- a/terminal/assets/code-mirror/package.json
+++ b/terminal/assets/code-mirror/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "@codemirror/state": "^6.5.2",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
     "codemirror": "^6.0.1"
   },
   "devDependencies": {
