--- a/terminal/assets/jsdeps/package.json
+++ b/terminal/assets/jsdeps/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@codemirror/state": "^6.5.2",
+    "@marimo-team/codemirror-languageserver": "^1.15.15",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
