--- a/terminal/tests/config-client2.toml
+++ b/terminal/tests/config-client2.toml
@@ -8,7 +8,7 @@ token_refresh = "4m 50s"
 certificate_renewal_threshold = "30days"
 
 [server.config_file_poll_strategy]
-fixed = "1m"
+fixed = "5s"
 
 [mesh]
 client_name = "Qwerty"
