--- a/terminal/assets/jsdeps/package.json
+++ b/terminal/assets/jsdeps/package.json
@@ -6,12 +6,14 @@
     "build": "webpack"
   },
   "dependencies": {
+    "@codemirror/lang-rust": "^6.0.2",
     "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@marimo-team/codemirror-languageserver": "^1.15.15",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
-    "codemirror": "^6.0.1"
+    "codemirror": "^6.0.2"
   },
   "devDependencies": {
     "codemirror": "^6.0.1",
