--- a/terminal/assets/jsdeps/package.json
+++ b/terminal/assets/jsdeps/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "@codemirror/lang-rust": "^6.0.2",
+    "@codemirror/lint": "^6.8.5",
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.37.2",
     "@marimo-team/codemirror-languageserver": "^1.15.15",
+    "@open-rpc/client-js": "^1.8.1",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
