--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 nameth = { version = "0.1.16" }
 nix = { version = "0.30.1" }
+notify = { version = "8.0.0" }
 openssl = { version = "0.10.73" }
 pbkdf2 = { version = "0.12.2" }
 pin-project = { version = "1.1.10" }
