--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -43,6 +43,7 @@ rpassword = { workspace = true, optional = true }
 scopeguard = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde-wasm-bindgen = { workspace = true, optional = true }
 server_fn = { workspace = true }
 sha2 = { workspace = true, optional = true }
 static_assertions = { workspace = true, optional = true }
@@ -99,6 +100,7 @@ fluent-asserter = { workspace = true }
 [features]
 default = ["server", "max_level_info"]
 client = [
+    "dep:serde-wasm-bindgen",
     "dep:stylance",
     "dep:wasm-bindgen-futures",
     "dep:wasm-bindgen",
