--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "client",
         "server",
         "no_wasm_build",
-        "diagnostics"
+        "diagnostics",
+        "terminal"
     ],
 }
