--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -13,12 +13,12 @@ runs:
 
     - name: Clippy
       run: |
-        cargo clippy --no-default-features --features client,max_level_debug,diagnostics
-        cargo clippy --no-default-features --features client,max_level_info --release
-        cargo clippy --bin game --no-default-features --features server,max_level_debug,debug,diagnostics
-        cargo clippy --bin game --no-default-features --features server,max_level_info --release
-        cargo clippy --bin terrazzo-terminal --no-default-features --features server,max_level_debug,debug,diagnostics
-        cargo clippy --bin terrazzo-terminal --no-default-features --features server,max_level_info --release
+        cargo clippy --no-default-features --features client,max-level-debug,diagnostics
+        cargo clippy --no-default-features --features client,max-level-info --release
+        cargo clippy --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
+        cargo clippy --bin game --no-default-features --features server,max-level-info --release
+        cargo clippy --bin terrazzo-terminal --no-default-features --features server,max-level-debug,debug,diagnostics
+        cargo clippy --bin terrazzo-terminal --no-default-features --features server,max-level-info --release
       shell: bash
 
     - name: Rustfmt
