--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "server",
         "no_wasm_build",
         "diagnostics",
-        "terminal"
+        "terminal-client",
+        "terminal-server",
     ],
 }
