--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 fluent-asserter = { version = "0.1.9" }
 futures = { version = "0.3.31" }
+heck = { version = "0.5.0" }
 http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
 include_directory = { version = "0.1.1" }
