--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -5,12 +5,13 @@ runs:
     # Avoids race with two build scripts installing wasm-bindgen-cli at the same time.
     - name: First compile
       run: |
-        cargo build --bin game --no-default-features --features server
-        cargo build --bin terrazzo-terminal --no-default-features --features server
+        cargo build --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
+        cargo build --bin terrazzo-terminal --no-default-features --features server-all,max-level-debug,diagnostics
       shell: bash
+
     - name: Test client
-      run: cargo test --no-default-features --features client,diagnostics
-      shell: bash
-    - name: Test server
-      run: cargo test --no-default-features --features server
+      run: |
+        cargo test --no-default-features --features diagnostics,client-all
+        cargo test --no-default-features --features diagnostics,server-all
+        cargo test --no-default-features --features diagnostics,server-all,client-all
       shell: bash
