--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -18,6 +18,7 @@ runs:
         cargo check --bin terrazzo-terminal --no-default-features --features server-all --features max-level-info
         cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features terminal-server
         cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features text-editor-server
+        cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features converter-server
         cargo check --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
         cargo check --bin game --no-default-features --features server,max-level-info --release
       shell: bash
@@ -29,6 +30,7 @@ runs:
         cargo clippy --bin terrazzo-terminal --no-default-features --features server-all --features max-level-info
         cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features terminal-server
         cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features text-editor-server
+        cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features converter-server
         cargo clippy --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
         cargo clippy --bin game --no-default-features --features server,max-level-info --release
       shell: bash
