--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
+    "rust-analyzer.cargo.noDefaultFeatures": true,
     "rust-analyzer.cargo.features": [
         "client",
         "server",
         "no_wasm_build",
         "diagnostics",
-        "terminal-client",
-        "terminal-server",
-        "text-editor-client",
-        "text-editor-server",
+        // "terminal-client",
+        // "terminal-server",
+        // "text-editor-client",
+        // "text-editor-server",
+        "converter-client",
+        "converter-server",
     ],
 }
