--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,8 @@
         "diagnostics",
         // "terminal-client",
         // "terminal-server",
-        // "text-editor-client",
-        // "text-editor-server",
+        "text-editor-client",
+        "text-editor-server",
         "converter-client",
         "converter-server",
     ],
