--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
         "server",
         "no_wasm_build",
         "diagnostics",
-        // "terminal-client",
-        // "terminal-server",
+        "terminal-client",
+        "terminal-server",
         "text-editor-client",
         "text-editor-server",
         "converter-client",
