--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -26,7 +26,7 @@ base64 = { workspace = true, optional = true }
 clap = { workspace = true, optional = true }
 const_format = { workspace = true, optional = true }
 dashmap = { workspace = true, optional = true }
-futures = { workspace = true }
+futures = { workspace = true, optional = true }
 humantime = { workspace = true, optional = true }
 inventory = { workspace = true, optional = true }
 jsonwebtoken = { workspace = true, optional = true }
@@ -40,7 +40,7 @@ pin-project = { workspace = true, optional = true }
 prost = { workspace = true, optional = true }
 prost-types = { workspace = true, optional = true }
 rpassword = { workspace = true, optional = true }
-scopeguard = { workspace = true }
+scopeguard = { workspace = true, optional = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde-wasm-bindgen = { workspace = true, optional = true }
@@ -85,8 +85,8 @@ fluent-asserter = { workspace = true }
 [features]
 default = ["prod"]
 prod = ["max-level-info", "server-all"]
-server-all = ["terminal-server", "text-editor-server"]
-client-all = ["terminal-client", "text-editor-client"]
+server-all = ["terminal-server", "text-editor-server", "converter-server"]
+client-all = ["terminal-client", "text-editor-client", "converter-client"]
 
 client = [
     "dep:stylance",
@@ -100,17 +100,19 @@ server = [
     "dep:base64",
     "dep:clap",
     "dep:const_format",
+    "dep:futures",
     "dep:humantime",
     "dep:inventory",
     "dep:jsonwebtoken",
     "dep:nix",
     "dep:openssl",
     "dep:pbkdf2",
+    "dep:pin-project",
     "dep:prost-types",
     "dep:prost",
     "dep:rpassword",
+    "dep:scopeguard",
     "dep:sha2",
-    "dep:pin-project",
     "dep:tokio",
     "dep:toml",
     "dep:tonic",
@@ -145,7 +147,9 @@ correlation-id = []
 terminal = ["correlation-id"]
 terminal-client = [
     "client",
+    "dep:futures",
     "dep:pin-project",
+    "dep:scopeguard",
     "dep:wasm-streams",
     "dep:web-sys",
     "terminal",
@@ -162,6 +166,8 @@ terminal-server = [
 text-editor = []
 text-editor-client = [
     "client",
+    "dep:futures",
+    "dep:scopeguard",
     "dep:serde-wasm-bindgen",
     "text-editor",
     "web-sys/KeyboardEvent",
@@ -173,6 +179,15 @@ text-editor-server = [
     "server",
     "text-editor",
 ]
+converter = []
+converter-client = [
+    "client",
+    "converter",
+    "dep:web-sys",
+    "web-sys/HtmlTextAreaElement",
+    "web-sys/InputEvent",
+]
+converter-server = ["server", "converter"]
 
 [package.metadata.stylance]
 output_file = "./target/css/terrazzo-terminal.scss"
