--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
 include_directory = { version = "0.1.1" }
 inventory = { version = "0.3.20" }
+serde_yaml_ng = { version = "0.10.0" }
 jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.174" }
 mime = { version = "0.3.17" }
