--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -43,6 +43,7 @@ rpassword = { workspace = true, optional = true }
 scopeguard = { workspace = true, optional = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yaml_ng = { workspace = true, optional = true }
 serde-wasm-bindgen = { workspace = true, optional = true }
 server_fn = { workspace = true }
 sha2 = { workspace = true, optional = true }
@@ -187,7 +188,7 @@ converter-client = [
     "web-sys/HtmlTextAreaElement",
     "web-sys/InputEvent",
 ]
-converter-server = ["server", "converter"]
+converter-server = ["server", "converter", "dep:serde_yaml_ng"]
 
 [package.metadata.stylance]
 output_file = "./target/css/terrazzo-terminal.scss"
