--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,6 @@ http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
 include_directory = { version = "0.1.1" }
 inventory = { version = "0.3.20" }
-serde_yaml_ng = { version = "0.10.0" }
 jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.174" }
 mime = { version = "0.3.17" }
@@ -65,6 +64,7 @@ proc-macro2 = { version = "1.0.95" }
 prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
+regex = { version = "1.11.1" }
 reqwest-wasm = { version = "0.11.16" }
 rpassword = { version = "7.4.0" }
 rsass-macros = { version = "0.29.0" }
@@ -73,9 +73,11 @@ scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
+serde_yaml_ng = { version = "0.10.0" }
 serde-wasm-bindgen = { version = "0.6.5" }
 server_fn = { version = "0.8.2" }
 sha2 = { version = "0.10.9" }
+simple_asn1 = { version = "0.6.3" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.6.0" }
 syn = { version = "2.0.104" }
