--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ incremental = true       # Incremental compilation.
 [workspace.dependencies]
 terrazzo-pty = { version = "0.1.15", path = "pty" }
 
+asn1-rs = { version = "0.7.1" }
 async-trait = { version = "0.1.88" }
 autoclone = { version = "0.1.16" }
 axum = { version = "0.8.4" }
@@ -77,7 +78,6 @@ serde_yaml_ng = { version = "0.10.0" }
 serde-wasm-bindgen = { version = "0.6.5" }
 server_fn = { version = "0.8.2" }
 sha2 = { version = "0.10.9" }
-simple_asn1 = { version = "0.6.3" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.6.0" }
 syn = { version = "2.0.104" }
