--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ chrono = { version = "0.4.41", default-features = false, features = [
     "wasmbind",
 ] }
 clap = { version = "4.5.41", features = ["derive"] }
+cms = { version = "0.2.3" }
 const_format = { version = "0.2.34" }
 darling = { version = "0.21.0" }
 dashmap = { version = "6.1.0" }
@@ -56,6 +57,7 @@ mime_guess = { version = "2.0.5" }
 nameth = { version = "0.1.16" }
 nix = { version = "0.30.1" }
 notify = { version = "8.1.0" }
+oid-registry = { version = "0.8.1" }
 openssl = { version = "0.10.73" }
 pbkdf2 = { version = "0.12.2" }
 pin-project = { version = "1.1.10" }
