--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,6 +101,7 @@ tracing-subscriber-wasm = { version = "0.1.0" }
 trz-gateway-client = { version = "0.1.16" }
 trz-gateway-common = { version = "0.1.16" }
 trz-gateway-server = { version = "0.1.16" }
+unescaper = { version = "0.1.6" }
 uuid = { version = "1.17.0" }
 wasm-bindgen = { version = "0.2.100" }
 wasm-bindgen-futures = { version = "0.4.50" }
