--- a/terminal/tests/config-client2.toml
+++ b/terminal/tests/config-client2.toml
@@ -1,8 +1,8 @@
 [server]
 host = "localhost"
 port = 3101
-pidfile = "/home/richard/.terrazzo/terminal-3101.pid"
-private_root_ca = "/home/richard/.terrazzo/root_ca"
+pidfile = "~/.terrazzo/terminal-3101.pid"
+private_root_ca = "~/.terrazzo/root_ca"
 token_lifetime = "5m"
 token_refresh = "4m 50s"
 certificate_renewal_threshold = "30days"
@@ -13,8 +13,8 @@ fixed = "15s"
 [mesh]
 client_name = "Qwerty"
 gateway_url = "https://localhost:3100"
-gateway_pki = "/home/richard/.terrazzo/root_ca.cert"
-client_certificate = "/home/richard/.terrazzo/test_certificate_qwerty"
+gateway_pki = "~/.terrazzo/root_ca.cert"
+client_certificate = "~/.terrazzo/test_certificate_qwerty"
 client_certificate_renewal = "30days"
 
 [mesh.retry_strategy.exponential-backoff]
