--- a/terminal/tests/config-server.toml
+++ b/terminal/tests/config-server.toml
@@ -1,8 +1,8 @@
 [server]
 host = "localhost"
 port = 3001
-pidfile = "/home/richard/.terrazzo/terminal-3001.pid"
-private_root_ca = "/home/richard/.terrazzo/root_ca"
+pidfile = "~/.terrazzo/terminal-3001.pid"
+private_root_ca = "~/.terrazzo/root_ca"
 token_lifetime = "5m"
 token_refresh = "4m 50s"
 certificate_renewal_threshold = "30days"
