--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -23,6 +23,7 @@ required-features = ["server"]
 [dependencies]
 axum-extra = { workspace = true, optional = true, features = ["cookie"] }
 base64 = { workspace = true, optional = true }
+bitflags = { workspace = true, optional = true }
 clap = { workspace = true, optional = true }
 cms = { workspace = true, optional = true }
 const_format = { workspace = true, optional = true }
@@ -224,11 +225,14 @@ converter-server = [
 port-forward = []
 port-forward-client = [
     "client",
+    "dep:bitflags",
+    "dep:scopeguard",
     "dep:web-sys",
     "port-forward",
     "remotes-ui",
     "web-sys/HtmlOptionElement",
     "web-sys/HtmlSelectElement",
+    "web-sys/KeyboardEvent",
 ]
 port-forward-server = ["port-forward", "server"]
 
